chore: Refactoring due to the partial payment feature
Signed-off-by: Marek Forys <mforys73@gmail.com>